--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="app.js" defer></script>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Доска | Проект 4</title>
   </head>
   <body>
     <div class="container" id="board"></div>
+    <script src="./assets/js/app.js" defer></script>
   </body>
 </html>
